--- a/views/login.html
+++ b/views/login.html
@@ -86,6 +86,16 @@
     <div class="password-forgotten">
       <a href="">¿Olvidaste la Contraseña?</a>
     </div>
+    <section class="ad">
+      <p>Publicidad Animada</p>
+    </section>
+    <section class="partner-companies">
+      <p>empresas que confiaron en nosotros</p>
+      <p>Logos de empresas</p>
+    </section>
+    <div class="dot-carousel">
+      <p><i class="fas fa-ellipsis-h"></i></p>
+    </div>
   </main>
   <footer class="footer">
     <div>
