--- a/views/productCart.html
+++ b/views/productCart.html
@@ -71,12 +71,15 @@
     </div>
   </nav>
   <main>
+    <h2>Reservas por Confirmar</h2>
     <!-- <i class="fas fa-trash-alt"></i> -->
     <div class="top-flex-mobile">
-      <div class="prof-avatar">
-        <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+      <div class="div-avatar">
+        <div class="prof-avatar">
+          <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+        </div>
       </div>
-      <div>
+      <div class="div-descrption">
         <div class="title-per-device-productCart">Odontologo:</div>
         <div class="name-per-device-productCart">"Mario Corona"</div>
         <!--el nombre cambia segun el profesonial  -->
@@ -97,64 +100,18 @@
       </div>
     </div>
     <div class="top-flex-mobile">
-      <div class="prof-avatar">
-        <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+      <div class="div-avatar">
+        <div class="prof-avatar">
+          <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+        </div>
       </div>
-      <div>
-        <div class="title-per-device-productCart">electricista:</div>
-        <div class="name-per-device-productCart">"Pikachu"</div>
+      <div class="div-descrption">
+        <div class="title-per-device-productCart">Odontologo:</div>
+        <div class="name-per-device-productCart">"Mario Corona"</div>
         <!--el nombre cambia segun el profesonial  -->
       </div>
       <div class="reserved-date">
         <p>05/08/21</p>
-        <p>T. Tarde</p>
-      </div>
-      <div class="price-button-preview">
-        <div class="price-preview">
-          <p>$100.00</p>
-        </div>
-        <div class="trash-button">
-          <button type="submit">
-            <i class="fas fa-trash-alt"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-    <div class="top-flex-mobile">
-      <div class="prof-avatar">
-        <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
-      </div>
-      <div class="description">
-        <div class="title-per-device-productCart">Plomero:</div>
-        <div class="name-per-device-productCart">"123456789 123456789fdsdfsgsgsfg"</div>
-        <!--el nombre cambia segun el profesonial  -->
-      </div>
-      <div class="reserved-date">
-        <p>05/07/21</p>
-        <p>T. tarde</p>
-      </div>
-      <div class="price-button-preview">
-        <div class="price-preview">
-          <p>$100.00</p>
-        </div>
-        <div class="trash-button">
-          <button type="submit">
-            <i class="fas fa-trash-alt"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-    <div class="top-flex-mobile">
-      <div class="prof-avatar">
-        <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
-      </div>
-      <div>
-        <div class="title-per-device-productCart">Pintor:</div>
-        <div class="name-per-device-productCart">"Leo da Vinci"</div>
-        <!--el nombre cambia segun el profesonial  -->
-      </div>
-      <div class="reserved-date">
-        <p>06/10/21</p>
         <p>T. Mañana</p>
       </div>
       <div class="price-button-preview">
@@ -168,47 +125,75 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-    <!-- 
-      <div class="column22-productDetail">
-        <p class="title-prof-name">Detalles</p>
-        <p>Zona:</p>
-        <div class="details">
-          <div>
-            <p>Edad:</p>
-            <p>Matricula:</p>
-            <p>Trabaja en Equipo:</p>
-          </div>
-          <div>
-            <p>Años de Experiencia:</p>
-            <p>Lleva Herramientas:</p>
-          </div>
+    <div class="top-flex-mobile">
+      <div class="div-avatar">
+        <div class="prof-avatar">
+          <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
         </div>
-        <div class="prof-detail-text">
-          <p>Razones por cuales elegirme:</p>
-          <p class="prof-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, sit culpa officiis mollitia
-            odit eum tempore dolor. Cum necessitatibus quibusdam praesentium deleniti maxime similique illo qui, et
-            explicabo unde vel.</p>
+      </div>
+      <div class="div-descrption">
+        <div class="title-per-device-productCart">Odontologo:</div>
+        <div class="name-per-device-productCart">"Mario Corona"</div>
+        <!--el nombre cambia segun el profesonial  -->
+      </div>
+      <div class="reserved-date">
+        <p>05/08/21</p>
+        <p>T. Mañana</p>
+      </div>
+      <div class="price-button-preview">
+        <div class="price-preview">
+          <p>$100.00</p>
         </div>
-      </div> -->
+        <div class="trash-button">
+          <button type="submit">
+            <i class="fas fa-trash-alt"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="top-flex-mobile">
+      <div class="div-avatar">
+        <div class="prof-avatar">
+          <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+        </div>
+      </div>
+      <div class="div-descrption">
+        <div class="title-per-device-productCart">Odontologo:</div>
+        <div class="name-per-device-productCart">"Mario Corona"</div>
+        <!--el nombre cambia segun el profesonial  -->
+      </div>
+      <div class="reserved-date">
+        <p>05/08/21</p>
+        <p>T. Mañana</p>
+      </div>
+      <div class="price-button-preview">
+        <div class="price-preview">
+          <p>$100.00</p>
+        </div>
+        <div class="trash-button">
+          <button type="submit">
+            <i class="fas fa-trash-alt"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="confirm-button">
+      <button type="submit">
+        CONFIRMAR
+      </button>
+    </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <section class="ad">
+      <p>Publicidad Animada</p>
+    </section>
+    <section class="partner-companies">
+      <p>empresas que confiaron en nosotros</p>
+      <p>Logos de empresas</p>
+    </section>
+    <div class="dot-carousel">
+      <p><i class="fas fa-ellipsis-h"></i></p>
+    </div>
   </main>
   <footer class="footer">
     <div>
