--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
 <body>
   <header class="header-ppal">
     <div class="header-top">
-      <img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" />
+      <a href="/"><img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" /></a>
       <div class="search-bar">
         <input type="text" name="search-item">
         <button class="search-button"><i class="fas fa-search"></i></button>
@@ -70,7 +70,7 @@
     </div>
   </nav>
   <main>
-    <form action="/" method="" class="form-login">
+    <form action="" method="" class="form-login">
       <div class="username">
         <label for="username">Nombre de Usuario:</label>
         <input type="text" name="username" id="username">
