--- a/views/productCart.html
+++ b/views/productCart.html
@@ -19,7 +19,7 @@
 <body>
   <header class="header-ppal">
     <div class="header-top">
-      <img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" />
+      <a href="/"><img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" /></a>
       <div class="search-bar">
         <input type="text" name="search-item">
         <button class="search-button"><i class="fas fa-search"></i></button>
@@ -177,12 +177,19 @@
         </div>
       </div>
     </div>
+
+    <div class="keepShopping-button">
+      <a href="/">
+        <button type="submit">
+          Agregar Mas Servicios
+        </button>
+      </a>
+    </div>
     <div class="confirm-button">
       <button type="submit">
         CONFIRMAR
       </button>
     </div>
-
 
     <section class="ad">
       <p>Publicidad Animada</p>
