--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -87,7 +87,6 @@ main {
 }
 
 .confirm-button {
-  border-color: red;
   margin: auto;
   padding: 15px;
   width: 60%;
@@ -98,6 +97,24 @@ main {
   border-radius: 5px;
   background-color: rgb(49, 71, 92);
   color: rgb(248, 212, 92);
-  box-shadow: 8px 8px 5px black;
+  /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
+  width: 95%;
+  padding: 10px;
+}
+.confirm-button button:hover {
+  box-shadow: 6px 6px 30px rgb(248, 212, 92);
+}
+
+.keepShopping-button {
+  margin: auto;
+  padding: 15px;
+  width: 60%;
+  text-align: center;
+}
+.keepShopping-button button {
+  font-size: 25px;
+  border-radius: 5px;
+  background-color: rgb(49, 71, 92);
+  color: rgb(248, 212, 92);
   width: 95%;
 }
