--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -13,10 +13,16 @@ main {
   background-color: rgb(230, 230, 230);
 }
 
-.header-top img {
+.header-top a {
   width: 40%;
   max-width: 150px;
 }
+
+.header-top a img {
+  width: 100%;
+  max-width: 150px;
+}
+
 .header-top {
   display: flex;
   justify-content: space-between;
@@ -29,12 +35,23 @@ main {
 
 .search-bar {
   flex-grow: 1;
-  text-align: right;
+  text-align: center;
+  width: 50%;
+  max-width: 700px;
 }
 .search-bar input {
   width: 80%;
-  margin-top: 27px;
+  margin-top: 40px;
+  height: 25px;
 }
+
+.search-bar button {
+  height: 25px;
+}
+.top-phrase {
+  display: none;
+}
+
 .header-bottom {
   display: flex;
   justify-content: space-between;
@@ -49,6 +66,10 @@ main {
   display: flex;
   width: 40%;
   justify-content: space-evenly;
+}
+
+.top-title-per-device {
+  display: none;
 }
 .icon-contact {
   display: flex;
@@ -129,7 +150,7 @@ main {
   text-align: center;
   margin: auto;
 }
-.work-with-us-button {
+/* .work-with-us-button {
   font-size: 16px;
   text-align: center;
   margin: auto;
@@ -137,6 +158,25 @@ main {
   height: 10%;
   border: black solid 2px;
   box-shadow: 4px 4px 5px black;
+} */
+
+.work-with-us-button {
+  margin: auto;
+  padding: 15px;
+  width: 80%;
+  text-align: center;
+}
+.work-with-us-button button {
+  font-size: 14px;
+  border-radius: 5px;
+  background-color: rgb(49, 71, 92);
+  color: rgb(248, 212, 92);
+  /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
+  width: 95%;
+  padding: 10px;
+}
+.work-with-us-button button:hover {
+  box-shadow: 6px 6px 30px rgb(248, 212, 92);
 }
 
 .title-categories {
@@ -151,14 +191,15 @@ main {
 }
 .icon-article {
   width: 40%;
+  max-width: 200px;
   text-align: center;
-  font-size: 2.5em;
+  font-size: 36px;
   margin: 10px;
   border: 10px rgb(49, 71, 92) double;
 }
 
 .icon-txt {
-  font-size: 0.5em;
+  font-size: 16px;
   background-color: rgb(49, 71, 92);
   color: rgb(248, 212, 92);
   font-weight: 400;
@@ -220,7 +261,8 @@ main {
   list-style: none;
   width: 95%;
   justify-content: space-evenly;
-  font-size: 0.9em;
+  font-size: 16px;
+  max-width: 500px;
 }
 
 .Copyright {
