--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -19,7 +19,7 @@
 <body>
   <header class="header-ppal">
     <div class="header-top">
-      <img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" />
+      <a href="/"><img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" /></a>
       <div class="search-bar">
         <input type="text" name="search-item">
         <button class="search-button"><i class="fas fa-search"></i></button>
