--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" href="/css/theme.css" />
   <link rel="stylesheet" href="/css/productDetail.css" />
   <link rel="stylesheet" href="/css/tablet-productDetail.css" />
-  <title>estas en index</title>
+  <link rel="stylesheet" href="/css/desktop-index.css" />
+  <link rel="stylesheet" href="/css/desktop-productDetail.css" />
+  <title>Profesional</title>
 </head>
 
 <body>
@@ -23,6 +25,12 @@
       <div class="search-bar">
         <input type="text" name="search-item">
         <button class="search-button"><i class="fas fa-search"></i></button>
+      </div>
+      <div class="top-phrase">
+
+        <p><i class="fas fa-handshake"></i>Reservá Sin Problemas,</p>
+        <p>Cancela Sin Costo Agregado<i class="fas fa-handshake-slash"></i></p>
+
       </div>
     </div>
     <div class="header-bottom">
@@ -38,6 +46,10 @@
           <i class="fab fa-youtube"></i>
         </div>
       </div>
+      <div>
+        <p class="top-title-per-device">La Solución que Buscás, con el Profesionalismo que Necesitás</p>
+        <!-- modificar tamaño per device -->
+      </div>
       <div class="icon-contact">
         <div class="logo-gmail">
           <i class="fas fa-envelope"></i>
@@ -51,7 +63,7 @@
   <nav class="nav-login">
     <section class="categories">
       <div>
-        <p>Categorias <i class="fas fa-chevron-down"></i></p>
+        <p>CATEGORIAS <i class="fas fa-chevron-down"></i></p>
       </div>
       <div class="prof-zona">
         <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
@@ -71,123 +83,135 @@
     </div>
   </nav>
   <main>
-    <div class="columns-productDetail-father">
-      <div class="column12-productDetail">
-        <div class="prof-title-father">
-          <p class="title-per-device-productDetail">Odontologo:</p>
-          <p class="name-per-device-productDetail">"Mario Don King Kong"</p>
-          <!--el nombre cambia segun el profesonial  -->
+    <div class="allProduct">
+      <div class="prof-title-father">
+        <p class="title-per-device-productDetail">Odontologo:</p>
+        <p class="name-per-device-productDetail">"Mario Don King Kong"</p>
+        <!--el nombre cambia segun el profesonial  -->
+      </div>
+      <div class="columns-productDetail-father">
+        <div class="column12-productDetail">
+
+          <div class="top-flex-mobile">
+            <div class="prof-avatar">
+              <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+            </div>
+
+            <div class="rating-father">
+              <div class="rating-star">
+                <div class="empty-star">
+                  <span>Resultado</span>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+                <div class="full-star">
+                  <span>Precio</span>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+                <div class="half-star">
+                  <span>Rapidez</span>
+                  <i class="fas fa-star-half-alt"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+              </div>
+              <p class="average-phrase">Promedio entre: n Opiniones</p>
+            </div>
+          </div>
+          <div class="buttons-below-avatar">
+            <div>
+              <p>Disponibilidad:</p>
+              <input type="date" id="date">
+            </div>
+            <button type="submit" style="width: 25vw;">
+              Agregar Servicio
+            </button>
+          </div>
         </div>
-        <div class="top-flex-mobile">
-          <div class="prof-avatar">
-            <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+        <div class="column22-productDetail">
+          <p class="title-prof-name">Detalles</p>
+          <p>Zona:</p>
+          <div class="details">
+            <div>
+              <p>Edad:</p>
+              <p>Matricula:</p>
+              <p>Trabaja en Equipo:</p>
+            </div>
+            <div>
+              <p>Años de Experiencia:</p>
+              <p>Lleva Herramientas:</p>
+            </div>
           </div>
 
-          <div class="rating-father">
-            <div class="rating-star">
-              <div class="empty-star">
-                <span>Resultado</span>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-              <div class="full-star">
-                <span>Precio</span>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-              <div class="half-star">
-                <span>Rapidez</span>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-            </div>
-            <p class="average-phrase">Promedio entre: n Opiniones</p>
-          </div>
         </div>
-        <div class="buttons-below-avatar">
-          <div>
-            <p>Disponibilidad:</p>
-            <input type="date" id="date">
-          </div>
-          <button type="submit" style="width: 25vw;">
-            Agregar Servicio
-          </button>
-        </div>
+
       </div>
-      <div class="column22-productDetail">
-        <p class="title-prof-name">Detalles</p>
-        <p>Zona:</p>
-        <div class="details">
-          <div>
-            <p>Edad:</p>
-            <p>Matricula:</p>
-            <p>Trabaja en Equipo:</p>
-          </div>
-          <div>
-            <p>Años de Experiencia:</p>
-            <p>Lleva Herramientas:</p>
-          </div>
-        </div>
-        <div class="prof-detail-text">
-          <p>Razones por cuales elegirme:</p>
-          <p class="prof-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, sit culpa officiis mollitia
-            odit eum tempore dolor. Cum necessitatibus quibusdam praesentium deleniti maxime similique illo qui, et
-            explicabo unde vel.</p>
-        </div>
+      <div class="prof-detail-text">
+        <p class="prof-detail-title-text">Razones por cuales elegirme:</p>
+        <p class="prof-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, sit culpa officiis
+          mollitia
+          odit eum tempore dolor. Cum necessitatibus quibusdam praesentium deleniti maxime similique illo qui, et
+          explicabo unde vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, sit culpa officiis
+          mollitia
+          odit eum tempore dolor. Cum necessitatibus quibusdam praesentium deleniti maxime similique illo qui, et
+          explicabo unde vel.Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, sit culpa officiis
+          mollitia
+          odit eum tempore dolor. Cum necessitatibus quibusdam praesentium deleniti maxime similique illo qui, et
+          explicabo unde vel.</p>
       </div>
-    </div>
-    <!-- categorias -->
-    <h3 class="title-categories">Tambien te Puede Interesar</h3>
-    <section class="icon-categories-product">
-      <article class="icon-article productDetail">
-        <!-- mecanica auto -->
-        <i class="fas fa-wrench"></i>
-        <p class="icon-txt">Mecanicos/as</p>
-      </article>
-      <article class="icon-article">
-        <!-- electricista -->
-        <i class="fas fa-plug"></i>
-        <p class="icon-txt">Electricistas</p>
-      </article>
-      <article class="icon-article">
-        <!-- dentistas -->
-        <i class="fas fa-tooth"></i>
-        <p class="icon-txt">Odontologos/as</p>
-      </article>
-      <article class="icon-article">
-        <!-- plomeria -->
-        <i class="fas fa-faucet"></i>
-        <p class="icon-txt">Plomeros/as</p>
-      </article>
-      <article class="icon-article">
-        <!-- carpinteria -->
-        <i class="fas fa-hammer"></i>
-        <p class="icon-txt">Carpinteros/as/p>
-      </article>
-      <article class="icon-article">
-        <!-- pintores -->
-        <i class="fas fa-paint-roller"></i>
-        <p class="icon-txt">Pintores/as</p>
-      </article>
-    </section>
-    <section class="ad">
-      <p>Publicidad Animada</p>
-    </section>
-    <section class="partner-companies">
-      <p>empresas que confiaron en nosotros</p>
-      <p>Logos de empresas</p>
-    </section>
-    <div class="dot-carousel">
-      <p><i class="fas fa-ellipsis-h"></i></p>
+      <!-- categorias -->
+      <h3 class="title-categories">Tambien te Puede Interesar</h3>
+      <section class="icon-categories-product">
+        <article class="icon-article productDetail">
+          <!-- mecanica auto -->
+          <i class="fas fa-wrench"></i>
+          <p class="icon-txt">Mecanicos/as</p>
+        </article>
+        <article class="icon-article">
+          <!-- electricista -->
+          <i class="fas fa-plug"></i>
+          <p class="icon-txt">Electricistas</p>
+        </article>
+        <article class="icon-article">
+          <!-- dentistas -->
+          <i class="fas fa-tooth"></i>
+          <p class="icon-txt">Odontologos/as</p>
+        </article>
+        <article class="icon-article">
+          <!-- plomeria -->
+          <i class="fas fa-faucet"></i>
+          <p class="icon-txt">Plomeros/as</p>
+        </article>
+        <article class="icon-article">
+          <!-- carpinteria -->
+          <i class="fas fa-hammer"></i>
+          <p class="icon-txt">Carpinteros/as/p>
+        </article>
+        <article class="icon-article">
+          <!-- pintores -->
+          <i class="fas fa-paint-roller"></i>
+          <p class="icon-txt">Pintores/as</p>
+        </article>
+      </section>
+      <section class="ad">
+        <p>Publicidad Animada</p>
+      </section>
+      <section class="partner-companies">
+        <p>empresas que confiaron en nosotros</p>
+        <p>Logos de empresas</p>
+      </section>
+      <div class="dot-carousel">
+        <p><i class="fas fa-ellipsis-h"></i></p>
+      </div>
     </div>
   </main>
   <footer class="footer">
