--- a/public/css/login.css
+++ b/public/css/login.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   width: 90%;
   padding: 20px;
+  max-width: 700px;
 }
 
 .username {
@@ -25,6 +26,24 @@
   margin: auto;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.login-button {
+  margin: auto;
+  margin-top: 20px;
+  width: 60%;
+  text-align: center;
+}
+.login-button button {
+  font-size: 25px;
+  border-radius: 5px;
+  background-color: rgb(49, 71, 92);
+  color: rgb(248, 212, 92);
+  /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
+  width: 95%;
+}
+.login-button button:hover {
+  box-shadow: 6px 6px 30px rgb(248, 212, 92);
 }
 
 .password-forgotten {
