--- a/views/productCart.html
+++ b/views/productCart.html
@@ -13,6 +13,10 @@
   <link rel="stylesheet" href="/css/theme.css" />
   <link rel="stylesheet" href="/css/productDetail.css" />
   <link rel="stylesheet" href="/css/productCart.css" />
+  <link rel="stylesheet" href="/css/tablet-index.css" />
+  <link rel="stylesheet" href="/css/desktop-index.css" />
+  <link rel="stylesheet" href="/css/desktop-productCart.css" />
+
   <title>estas en index</title>
 </head>
 
@@ -23,6 +27,12 @@
       <div class="search-bar">
         <input type="text" name="search-item">
         <button class="search-button"><i class="fas fa-search"></i></button>
+      </div>
+      <div class="top-phrase">
+
+        <p><i class="fas fa-handshake"></i>Reservá Sin Problemas,</p>
+        <p>Cancela Sin Costo Agregado<i class="fas fa-handshake-slash"></i></p>
+
       </div>
     </div>
     <div class="header-bottom">
@@ -37,6 +47,10 @@
         <div class="logo-youtube">
           <i class="fab fa-youtube"></i>
         </div>
+      </div>
+      <div>
+        <p class="top-title-per-device">La Solución que Buscás, con el Profesionalismo que Necesitás</p>
+        <!-- modificar tamaño per device -->
       </div>
       <div class="icon-contact">
         <div class="logo-gmail">
@@ -71,7 +85,7 @@
     </div>
   </nav>
   <main>
-    <h2>Reservas por Confirmar</h2>
+    <p class="title-cart">Reservas por Confirmar</p>
     <!-- <i class="fas fa-trash-alt"></i> -->
     <div class="top-flex-mobile">
       <div class="div-avatar">
