--- a/views/index.html
+++ b/views/index.html
@@ -87,63 +87,66 @@
     </div>
   </nav>
   <main>
-    <div>
-      <p class="title-per-device">La solución que buscas, con el profesionalismo que necesitas</p>
-      <!-- modificar tamaño per device -->
-    </div>
-    <section class="services-carousel">
-      <p>Lugar para imagenes de servicios en carousel</p>
-    </section>
-    <div class="dot-carousel">
-      <p><i class="fas fa-ellipsis-h"></i></p>
-    </div>
-    <div class="work-with-us-button">
-      <a href="registerProf"><button type="submit">Sumáte a Nuestro Equipo de Profesionales</button></a>
-    </div>
-    <h3 class="title-categories">Categorias mas Solicitadas</h3>
-    <section class="icon-categories">
-      <article class="icon-article">
-        <!-- mecanica auto -->
-        <i class="fas fa-wrench"></i>
-        <p class="icon-txt">Mecanicos/as</p>
-      </article>
-      <article class="icon-article">
-        <!-- electricista -->
-        <i class="fas fa-plug"></i>
-        <p class="icon-txt">Electricistas</p>
-      </article>
-      <article class="icon-article">
-        <!-- dentistas -->
-        <i class="fas fa-tooth"></i>
-        <p class="icon-txt">Odontologos/as</p>
-      </article>
-      <article class="icon-article">
-        <!-- plomeria -->
-        <i class="fas fa-faucet"></i>
-        <p class="icon-txt">Plomeros/as</p>
-      </article>
-      <article class="icon-article">
-        <!-- carpinteria -->
-        <i class="fas fa-hammer"></i>
-        <p class="icon-txt">Carpinteros/as/
-        <p>
-      </article>
-      <article class="icon-article">
-        <!-- pintores -->
-        <i class="fas fa-paint-roller"></i>
-        <p class="icon-txt">Pintores/as</p>
-      </article>
+    <div class="all-index">
 
-    </section>
-    <section class="ad">
-      <p>Publicidad Animada</p>
-    </section>
-    <section class="partner-companies">
-      <p>empresas que confiaron en nosotros</p>
-      <p>Logos de empresas</p>
-    </section>
-    <div class="dot-carousel">
-      <p><i class="fas fa-ellipsis-h"></i></p>
+      <div>
+        <p class="title-per-device">La solución que buscas, con el profesionalismo que necesitas</p>
+        <!-- modificar tamaño per device -->
+      </div>
+      <section class="services-carousel">
+        <p>Lugar para imagenes de servicios en carousel</p>
+      </section>
+      <div class="dot-carousel">
+        <p><i class="fas fa-ellipsis-h"></i></p>
+      </div>
+      <div class="work-with-us-button">
+        <a href="registerProf"><button type="submit">Sumáte a Nuestro Equipo de Profesionales</button></a>
+      </div>
+      <h3 class="title-categories">Categorias mas Solicitadas</h3>
+      <section class="icon-categories">
+        <article class="icon-article">
+          <!-- mecanica auto -->
+          <i class="fas fa-wrench"></i>
+          <p class="icon-txt">Mecanicos/as</p>
+        </article>
+        <article class="icon-article">
+          <!-- electricista -->
+          <i class="fas fa-plug"></i>
+          <p class="icon-txt">Electricistas</p>
+        </article>
+        <article class="icon-article">
+          <!-- dentistas -->
+          <i class="fas fa-tooth"></i>
+          <p class="icon-txt">Odontologos/as</p>
+        </article>
+        <article class="icon-article">
+          <!-- plomeria -->
+          <i class="fas fa-faucet"></i>
+          <p class="icon-txt">Plomeros/as</p>
+        </article>
+        <article class="icon-article">
+          <!-- carpinteria -->
+          <i class="fas fa-hammer"></i>
+          <p class="icon-txt">Carpinteros/as/
+          <p>
+        </article>
+        <article class="icon-article">
+          <!-- pintores -->
+          <i class="fas fa-paint-roller"></i>
+          <p class="icon-txt">Pintores/as</p>
+        </article>
+
+      </section>
+      <section class="ad">
+        <p>Publicidad Animada</p>
+      </section>
+      <section class="partner-companies">
+        <p>empresas que confiaron en nosotros</p>
+        <p>Logos de empresas</p>
+      </section>
+      <div class="dot-carousel">
+        <p><i class="fas fa-ellipsis-h"></i></p>
+      </div>
     </div>
   </main>
   <footer class="footer">
