--- a/views/registerClient.html
+++ b/views/registerClient.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/theme.css" />
   <link rel="stylesheet" href="/css/register.css" />
+  <link rel="stylesheet" href="/css/tablet-index.css" />
+  <link rel="stylesheet" href="/css/desktop-index.css" />
   <title>Registro Cliente</title>
 </head>
 
@@ -22,6 +24,12 @@
       <div class="search-bar">
         <input type="text" name="search-item">
         <button class="search-button"><i class="fas fa-search"></i></button>
+      </div>
+      <div class="top-phrase">
+
+        <p><i class="fas fa-handshake"></i>Reservá Sin Problemas,</p>
+        <p>Cancela Sin Costo Agregado<i class="fas fa-handshake-slash"></i></p>
+
       </div>
     </div>
     <div class="header-bottom">
@@ -37,6 +45,10 @@
           <i class="fab fa-youtube"></i>
         </div>
       </div>
+      <div>
+        <p class="top-title-per-device">La Solución que Buscás, con el Profesionalismo que Necesitás</p>
+        <!-- modificar tamaño per device -->
+      </div>
       <div class="icon-contact">
         <div class="logo-gmail">
           <i class="fas fa-envelope"></i>
@@ -50,7 +62,7 @@
   <nav class="nav-login">
     <section class="categories">
       <div>
-        <p>Categorias <i class="fas fa-chevron-down"></i></p>
+        <p>CATEGORIAS <i class="fas fa-chevron-down"></i></p>
       </div>
       <div class="prof-zona">
         <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
