--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,7 +1,14 @@
+main {
+  background-color: rgb(49, 71, 92);
+}
+
 .clientForm {
   margin: auto;
   width: 80%;
   padding: 10px;
+  max-width: 600px;
+  background-color: white;
+  margin-top: 20px;
 }
 
 .registerInput {
@@ -11,6 +18,7 @@
 
 .registerInput input {
   width: 100%;
+  height: 30px;
 }
 
 .clientForm label {
@@ -19,9 +27,10 @@
 
 .localidad-list label select {
   width: 100%;
+  height: 30px;
 }
 
-.confirm-button {
+/* .confirm-button {
   margin: auto;
   padding: 15px;
   width: 60%;
@@ -34,4 +43,23 @@
   color: rgb(248, 212, 92);
   box-shadow: 8px 8px 5px black;
   width: 95%;
+} */
+
+.confirm-button {
+  margin: auto;
+  padding: 15px;
+  width: 60%;
+  text-align: center;
+}
+.confirm-button button {
+  font-size: 25px;
+  border-radius: 5px;
+  background-color: rgb(49, 71, 92);
+  color: rgb(248, 212, 92);
+  /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
+  width: 95%;
+  padding: 10px;
+}
+.confirm-button button:hover {
+  box-shadow: 6px 6px 30px rgb(248, 212, 92);
 }
