--- a/views/registerClient.html
+++ b/views/registerClient.html
@@ -126,6 +126,18 @@
         <button type="submit">Enviar</button>
       </div>
     </form>
+    </section>
+    <section class="ad">
+      <p>Publicidad Animada</p>
+    </section>
+    <section class="partner-companies">
+      <p>empresas que confiaron en nosotros</p>
+      <p>Logos de empresas</p>
+    </section>
+    <div class="dot-carousel">
+      <p><i class="fas fa-ellipsis-h"></i></p>
+    </div>
+    </div>
   </main>
   <footer class="footer">
     <div>
